--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,13 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  },
+  "scripts": {
+    "start": "nodemon server.js",
+    "initDB": "node scripts/initDB.js"
   }
 }
