--- a/server/docker/nginx.conf
+++ b/server/docker/nginx.conf
@@ -12,6 +12,9 @@ http {
             proxy_pass http://node:5000;
         }
 
+        location /images/ {
+            root /;
+        }
         # Toutes les autres requêtes sont attrapées
         # Au passage nginx compresse les données
         location / {
